--- a/index.html
+++ b/index.html
@@ -27,10 +27,16 @@
 	<meta name="theme-color" content="black"/>
 	<link rel="icon" type="image/png" href="assets/9d453875-5881-4d4d-9b6e-3359c045fdfc.png"/>
 	<link rel="stylesheet" type="text/css" href="styleSheet.css"/>
+	<script src='https://cdn1.kongregate.com/javascripts/kongregate_api.js'></script>
 	<script type="text/javascript" src="jquery-1.12.1.min.js"></script>
 	<script type="text/javascript" src="gamelab-api.js"></script>
 	<script type="text/javascript" src="p5.js"></script>
 	<script type="text/javascript" src="p5.play.js"></script>
+	<script type="text/javascript">
+		kongregateAPI.loadAPI(function(){
+			window.kongregate = kongregateAPI.getAPI();
+  		});
+	</script>
 	<script type="text/javascript" src="code.js"></script>
 	<script type="text/javascript">
 		window.addEventListener("keydown", function(e) {
